src/test/testData/lang/java/rule/momosecurity/SpringSecurityDebugEnabled/Vuln.java
import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;

@EnableWebSecurity(<error descr="MomoSec: 发现 SpringSecurity 开启 Debug 模式">debug = true</error>)
public class Vuln {

}